--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Meghna Mane</title>
+    <title>Portfolio</title>
 </head>
 <body>
-    My Personal Portfolio -- Hey This is Meghna Mane
+   
+    <h6>I am Meghna Mane. I started my journey in coding since Nov 2020. 
+I am very good at learning and keeping good notes.</h6>
 
-I started learning programming from Nov 2020 in the pandamic. I was searching right tutorial for my learning. I have gone through many more useful , unuseful tutorial video's but I never got confidence about whatever I learnt from that video.
+<div class="skill">
+Current skills:
+1. HTML
+2. CSS
+3. Javascript
+4. CLI app : repl.it
+5. Git
+6. Github
+7. Netlify
+</div>
+<!-- I started learning programming from Nov 2020 in the pandamic. I was searching right tutorial for my learning. I have gone through many more useful , unuseful tutorial video's but I never got confidence about whatever I learnt from that video.
 When I started following TanayPratap's channel on Youtube, I able to get little idea about where to start and what to learn. Thereafter I have gone through the some important video's about beginners learning video ang I got to know about "neog.camp".
-And like wise started my level zero of neogcamp journey.
+And like wise started my level zero of neogcamp journey. -->
 </body>
 </html>
