refactor : updated with tag

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
    
-    <h6>I am Meghna Mane. I started my journey in coding since Nov 2020. 
-I am very good at learning and keeping good notes.</h6>
+<h2>I am Meghna Mane. </h2>
+
+I started my journey in coding since Nov 2020. I am very good at learning and keeping good notes.
 
 <div class="skill">
 Current skills:
