Update:  Project details

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ Current skills:
 6. Github
 7. Netlify
 </div>
+
+<p>I have worked on some CLI App. I have made 2 quiz app on replit.com. </p>
+
+
 <!-- I started learning programming from Nov 2020 in the pandamic. I was searching right tutorial for my learning. I have gone through many more useful , unuseful tutorial video's but I never got confidence about whatever I learnt from that video.
 When I started following TanayPratap's channel on Youtube, I able to get little idea about where to start and what to learn. Thereafter I have gone through the some important video's about beginners learning video ang I got to know about "neog.camp".
 And like wise started my level zero of neogcamp journey. -->
