--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ Current skills:
 
 <p>I have worked on some CLI App. I have made 2 quiz app on replit.com. </p>
 
+<p>I also like to read books, prepare traditional food and to serve and making new apps</p>
+
 
 <!-- I started learning programming from Nov 2020 in the pandamic. I was searching right tutorial for my learning. I have gone through many more useful , unuseful tutorial video's but I never got confidence about whatever I learnt from that video.
 When I started following TanayPratap's channel on Youtube, I able to get little idea about where to start and what to learn. Thereafter I have gone through the some important video's about beginners learning video ang I got to know about "neog.camp".
